# Jenga

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Jenga_User_Guide.md  LICENSE  LIVRE_JENGA.md  MANIFEST.in  README.md  README_v2.md  _s_etup.py  authors.mailmap  build_examples.bat  build_examples.sh  cri.bat  cri.sh  debug_build.py  debug_pch.py  description.md  gitpush.bat  gitpush.sh  install_jenga.py  jenga.bat  jenga.sh  nken.bat  nken.sh  nkmain_disasm.txt  pyproject.toml  pyrightconfig.json  pytest.ini  release.bat  release.sh  run_web.py  setup.py  supportplatform.md  test_api.py  tmp_nkplatform_android.i  tmp_nkplatform_pch_test.cpp  tmp_nkplatform_pch_test.o.d  tmp_va_android_test1.cpp  (+13 more)
.github/workflows/: release.yml  sync-wiki.yml
Docs/: ANDROID_EMSCRIPTEN_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  BOOK_PART_1.md  BOOK_PART_2.md  BOOK_PART_3.md  CHANGELOG_v1.0.2.md  CROSS_PLATFORM_GUIDE.md  EXTERNAL_PROJECTS_GUIDE.md  FINAL_SUMMARY.md  MIGRATION_GUIDE.md  MSVC_GUIDE.md  NESTED_TESTS_AND_NKM_GUIDE.md  NEW_COMMANDS_SUMMARY.md  PACKAGING_SIGNING_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_FIX.md  RELEASE_NOTES.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  VALIDATION_COMPLETE.md  WHATS_NEW.md
Exemples/: README.md  exemples.md  toolchains_by_example.md
Exemples/01_hello_console/: main.cpp
Exemples/02_static_library/: 02_static_library.jenga
Exemples/03_shared_library/app/: main.cpp
Exemples/06_ios_app/: 06_ios_app.jenga
Exemples/09_multi_projects/: 09_multi_projects.jenga
Exemples/10_modules_cpp20/: 10_modules_cpp20.jenga
Exemples/11_benchmark/: 11_benchmark.jenga
Exemples/11_benchmark/src/: main.cpp
Exemples/12_external_includes/: README.md
Exemples/12_external_includes/libs/: logger.jenga
Exemples/12_external_includes/src/: main.cpp
Exemples/13_packaging/: README.md
Exemples/14_cross_compile/: 14_cross_compile.jenga
Exemples/16_window_x11_linux/: 16_window_x11_linux.jenga  README.md
Exemples/18_window_android_native/: 18_window_android_native.jenga  README.md
Exemples/19_window_web_canvas/: README.md
Exemples/19_window_web_canvas/src/: main.cpp
Exemples/20_window_ios_uikit/: README.md
Exemples/22_nk_multiplatform_sandbox/: 22_nk_multiplatform_sandbox.jenga
Exemples/22_nk_multiplatform_sandbox/include/: EventSystem.hpp  Renderer.hpp  nk.hpp
Exemples/22_nk_multiplatform_sandbox/sandbox/: nk_user_main.cpp
Exemples/test_zig/: main.cpp
Jenga/: GlobalToolchains.py  Jenga.py  Readme.md  __init__.py  _envbackfill.py  _version.py  core.py  diagnose.py  jenga.bat  jenga.py  jenga.sh  jenga_loader.py  jenga_stubs.py  nken_stubs.py  requirements.txt
Jenga/Commands/: Add.py  Bench.py  Build.py  CHANGELOG.md  Config.py  Create.py  Deploy.py  ExampleDocumentation.h  Examples.py  Gdb.py  Help.py  INSTALLATION_GUIDE.md  IdeSetup.py  Info.py  Init.py  Keygen.py  Package.py  Profile.py  Publish.py  Readme.md  Run.py  __init__.py  add.py  build.py  build_fast.py  builds.py  clean.py  create copy.py  create.py  docs copy.py  docs.py  export.py  gen.py  info.py  init.py  install.py  jenga_docs_extractor.py  jenga_docs_parser.py  keygen.py  package.py  (+7 more)
Jenga/Core/: Api.py  Builder.py  Builder_HarmonyOS_patch.py  Cache.py  Daemon.py  DependencyResolver.py  FirewallSpec.py  IDEConfigurator.py  IconConverter.py  Incremental.py  JengaConfig.py  Toolchains.py  Variables.py
Jenga/Core/Builders/: Android.py  AppleMobileBuilder.py  Ios.py  (+9 more)
Jenga/Docs/: GUIDE_COMPLET_JENGA.md  GUIDE_GITHUB_SSH_TOKEN.md  Jenga_Developer_Guide.md  Jenga_User_Guide.md  RAPPORT_ACTIVITE_ANALYSE_COMPLETE.md  README.md  READMEV2.md  RELEASE_NOTES_v2.0.0.md  ROADMAP.md
Jenga/Exemples/: AllPlatformsApp.apk  README.md  exemples.md  toolchains_by_example.md  toolchains_cross_platform_templates.md
Jenga/Templates/: emscripten_fullscreen.html
Jenga/Tools/: __init__.py
Jenga/Unitest/: Readme.md  __init__.py
Jenga/Utils/: Display.py  ErrorReporter.py  FileSystem.py  Process.py  Readme.md  Reporter.py
Jenga/core/: Builder copy.py  Builder.py  Cache.py  Daemon.py  GlobalToolchains.py  JengaConfig.py  Platform.py  Readme.md  State.py  ToolchainLoader.py  Toolchains.py  Watcher.py  __init__.py  androidsystem.py  api.py  api.pyi  batchcompiler.py  buildsystem.py  buildsystem_fast.py  buildsystem_hybrid.py  commands.py  emscripten.py  fastcache.py  generator.py  incrementallinker.py  loader.py  pchmanager.py  testbuilder.py  unitybuild.py  variables.py  variables_fix.py
Jenga/tools/: android-tools.jenga
Jenga/utils/: Colored.py  FileSystem copy 2.py  FileSystem copy.py  __init__.py  display.py  reporter.py
jenga_build_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
logs/: shutdown_trace.txt
nken/: clean_examples.bat  clean_examples.sh  cri.sh
rs/prg/: 00_README_curriculum.md  01_mathematiques_graphique.md  02_programmation_2D.md  03_software_rendering.md  04_shaders_langages_gpu.md  05_opengl_programming.md  06_vulkan_programming.md  07_directx_11_12.md  08_gpgpu_computing.md  09_optimisation_performance.md  10_audio_programming.md  11_moteur_jeu_from_scratch.md  12_realtime_systems_programming.md  13_realtime_rendering_avance.md  14_IA_from_scratch.md  15_AR_from_scratch.md  16_VR_from_scratch.md  17_XR_from_scratch.md  18_system_immersive_engineering.md
scripts/: build_examples_archive.py  generate_launchers.py  jenga27_android_only.ps1  jenga27_build_order.ps1  jenga27_windows_web_only.ps1  run_all_examples_windows.ps1  setup_linux_sysroot.py  test_python_win.ps1  test_win_process.ps1  webserver.bat  webserver.py  zig-c++.bat  zig-cc.bat  zig-wrapper.py
templates/: toolchain-clang-example.json  toolchain-example.json
tests/: test_jenga_complete.py
tmps/: docs copy 2.py  docs_command.py  jenga_docs_markdown.py
wiki/: Home.md  Installation.md  Tests-Unitest.md  _Sidebar.md
(+506 files in other folders)
