[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jenga"
dynamic = ["version"]
description = "Cross‑platform build system for native applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Jenga Team (Rihen)", email = "rihen.universe@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "watchdog>=2.1.0",
    "requests>=2.28.0",
]

[project.urls]
Documentation = "https://rihen/docs"
Source = "https://github.com/RihenUniverse/Jenga"
Tracker = "https://github.com/RihenUniverse/Jenga/issues"

[project.scripts]
jenga = "Jenga.jenga:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["Jenga*"]

[tool.setuptools.package-data]
Jenga = [
    "Unitest/**/*",
    "Exemples/**/*",
    "py.typed",
]

[tool.setuptools.dynamic]
version = {attr = "Jenga.__version__"}
