[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jenga"
dynamic = ["version"]
description = "Cross‑platform build system for native applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Rihen", email = "rihen.universe@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "watchdog>=2.1.0",
    "requests>=2.28.0",
]

[project.urls]
Documentation = "https://rihen/docs"
Source = "https://github.com/RihenUniverse/Jenga"
Tracker = "https://github.com/RihenUniverse/Jenga/issues"

[project.scripts]
jenga = "Jenga.Jenga:main"

[tool.setuptools]
# IMPORTANT : false (et non true). Avec true, setuptools embarque TOUT le
# contenu git-tracke sous Jenga/, y compris Jenga/Exemples (~490 Mo : Nkentseu,
# externals, modeles 3D) -> wheel inutilisable. En listant explicitement les
# donnees ci-dessous, on garde un wheel leger. Les exemples restent dans le
# depot git et sont distribues separement (archive d'exemples allegee, voir
# .github/workflows/release.yml).
include-package-data = false

[tool.setuptools.packages.find]
include = ["Jenga*"]
exclude = ["Jenga.Exemples*", "Exemples*"]

[tool.setuptools.package-data]
Jenga = [
    "Unitest/**/*",
    "Templates/**/*",
    "py.typed",
    # Mini-echantillon : tous les exemples NUMEROTES (dossiers commencant par
    # 0/1/2), en version source legere (~2 Mo total, < 10 Mo). Le gros projet
    # "Nkentseu" et les ressources lourdes sont exclus ci-dessous et restent
    # disponibles via "jenga examples copy" (telechargement a la demande) ou
    # l'archive d'exemples de la release GitHub.
    "Exemples/*.md",
    "Exemples/[012]*/**/*",
]

[tool.setuptools.exclude-package-data]
# Retire du wheel le contenu lourd des exemples (build, dependances externes
# vendored, binaires, modeles 3D). Garde uniquement les sources/.jenga/README.
Jenga = [
    "Exemples/Nkentseu/**",
    "Exemples/**/build/**",
    "Exemples/**/Build/**",
    "Exemples/**/Externals/**",
    "Exemples/**/External/**",
    "Exemples/**/CMakeFiles/**",
    "Exemples/**/__pycache__/**",
    "Exemples/**/*.fbx",
    "Exemples/**/*.glb",
    "Exemples/**/*.o",
    "Exemples/**/*.obj",
    "Exemples/**/*.a",
    "Exemples/**/*.so",
    "Exemples/**/*.dll",
    "Exemples/**/*.dylib",
    "Exemples/**/*.lib",
    "Exemples/**/*.pdb",
    "Exemples/**/*.wasm",
    "Exemples/**/*.apk",
    "Exemples/**/*.aab",
    "Exemples/**/*.ipa",
    "Exemples/**/*.hap",
]

[tool.setuptools.dynamic]
# Lit directement le module léger _version.py (sans exécuter Jenga/__init__.py,
# qui importe toute l'API). Source unique de vérité de la version.
version = {attr = "Jenga._version.__version__"}
